--- a/about.html
+++ b/about.html
@@ -24,6 +24,6 @@ title: About the Morgan theme
     </main>
 
     <aside>
-        I'm that second column he keeps going on about. I don't have much to say at the moment but wanted to let you I'm here and this is what I look like.
+        I'm that second column I mentioned. I don't have much to say at the moment but wanted to let you I'm here and this is what I look like.
     </aside>
 </div>
